--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Calistoga|Montserrat:400,700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="fallIn">
   <header class="wrap">
     <img src="https://i.imgur.com/0DVcOQv.png"/>
     <h2>Hello Jake,</h2> 
@@ -24,7 +24,7 @@
     </section>
 
   </main>
-  <aside class="wrapScroll">
+  <aside class="wrapScroll"> 
     <p>Non Emeregency Requests</p>
     <section class="requestSlider">
       <div class="slides">
