--- a/index.html
+++ b/index.html
@@ -8,44 +8,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.95">
   <link rel="stylesheet" href="stylish.css">
   <link href="https://fonts.googleapis.com/css?family=Calistoga|Montserrat:400,700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #0062ff;
+    }
+  </style>
 </head>
 
-<body class="fallIn">
-  <header class="wrap">
-    <img src="https://i.imgur.com/0DVcOQv.png"/>
-    <h2>Hello Jake,</h2> 
-    <p>Please use the buttons to let a member of staff know you need something.
-  </header>
-  <main class= "userDash wrap">
-    <section class="request emergency">
-      <img src="https://i.imgur.com/h1Rt1Fb.png"/>
-      <h2>EMERGENCY</h2>
-      <p>Please only press this if you are in need of urgent staff attention.</p>
-    </section>
-
+<body>
+  
+  <main class="wrap">
+    <h1>Nightingale</h1>
+    <div class="formWrap scaleIn">
+      <form id="LoginForm" action="dashboard.html" method="post">
+        <h2>Create an account</h2>
+        <span class="accentColor"><p>Please enter accurate information</p></span>
+        <div class="formWrap">
+          <input type="text" name="fname" id="name" value="" placeholder=" First Name" tabindex="1"/>
+          <input type="text" name="lname" id="name" value="" placeholder=" Last Name" tabindex="2"/>  
+        </div>
+        <select name="room">
+          <option value="" disabled selected>Room number</option>
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
+        <input class="submit" type="submit" value="Next"/>
+      </form>
+    </div>
+    <a href=""><p>Staff Login</p></a>
   </main>
-  <aside class="wrapScroll"> 
-    <p>Non Emeregency Requests</p>
-    <section class="requestSlider">
-      <div class="slides">
-        <div class="request query">
-          <img src="https://i.imgur.com/38YTXzi.png"/>
-          <h2>Staff Query</h2>
-          <p>Have a question for a member of staff?</p> 
-        </div>
-        <div class="request sanitery">
-          <img src="https://i.imgur.com/Db59u3D.png"/>
-          <h2>Sanitery help</h2>
-          <p>Need a member of staff to help you use the toilet?</p> 
-        </div>
-        <div class="request pain">
-          <img src="https://i.imgur.com/9fZqWrN.png"/>
-          <h2>Pain Relief</h2>
-          <p>Expiriencing pain or have a question about pain relief?</p> 
-        </div>
-      </div>
-    </section>
-  </aside>
     
 </body>
 </html>
