--- a/dashboard.html
+++ b/dashboard.html
@@ -17,11 +17,13 @@
     <p>Please use the buttons to let a member of staff know you need something.
   </header>
   <main class= "userDash wrap">
-    <section class="request emergency">
-      <img src="https://i.imgur.com/h1Rt1Fb.png"/>
-      <h2>EMERGENCY</h2>
-      <p>Please only press this if you are in need of urgent staff attention.</p>
-    </section>
+    <a class="requestLink" href="userRequest.html">
+      <section class="request emergency">
+        <img src="https://i.imgur.com/h1Rt1Fb.png"/>
+        <h2>EMERGENCY</h2>
+        <p>Please only press this if you are in need of urgent staff attention.</p>
+      </section>
+    </a>
 
   </main>
   <aside class="wrapScroll"> 
