--- a/userRequest.html
+++ b/userRequest.html
@@ -26,18 +26,22 @@
   
   <div class="informationWrap">
     <section class="request information">
+      <img src="https://i.imgur.com/KaAmcUG.png"/>
       <h2>Staff Query</h2>
     </section>
     <section class="request information">
+      <img src="https://i.imgur.com/4O09uAm.png"/>
       <h2>Pain</h2>
     </section>
   </div>
   
   <div class="informationWrap">
     <section class="request information">
+      <img src="https://i.imgur.com/vE0qCeF.png"/>
       <h2>Dizziness</h2>
     </section>
     <section class="request information">
+      <img src="https://i.imgur.com/KvmEEn8.png"/>
       <h2>Heart</h2>
     </section>
   </div>
