--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
   
   <main class="wrap">
+    <img class="birdLogo" src="https://i.imgur.com/c21TBE7.png"/>
     <h1>Nightingale</h1>
     <div class="formWrap scaleIn">
       <form id="LoginForm" action="dashboard.html" method="post">
