--- a/Front End/index.html
+++ b/Front End/index.html
@@ -18,7 +18,7 @@
 <body>
   
   <main class="wrap">
-    <img class="birdLogo" src="https://i.imgur.com/c21TBE7.png"/>
+    <img class="birdLogo" src="https://i.imgur.com/h6YnPD6.png"/>
     <h1>Nightingale</h1>
     <div class="formWrap scaleIn">
       <form id="LoginForm" action="dashboard.html" method="post">
