--- a/Front End/staffAnalytics.html
+++ b/Front End/staffAnalytics.html
@@ -15,7 +15,7 @@
   <header class="wrap">
     <nav>
       <a href="staffDashboard.html"><p>Activity</p></a>
-      <img class="fallIn" src="https://i.imgur.com/2hdgVxo.png"/>
+      <img class="fallIn" src="https://i.imgur.com/x12dxqm.png"/>
       <a href="staffAnalytics.html"><p>Analytics</p></a>
     </nav>
     <h2>Analytics</h2> 
