--- a/Front End/index.html
+++ b/Front End/index.html
@@ -25,19 +25,16 @@
         <h2>Create an account</h2>
         <span class="accentColor"><p>Please enter accurate information</p></span>
         <div class="formWrap">
-          <input type="text" name="fname" id="name" value="" placeholder=" First Name" tabindex="1"/>
-          <input type="text" name="lname" id="name" value="" placeholder=" Last Name" tabindex="2"/>  
+          <input type="text" name="uName" id="name" value="" placeholder="Username" tabindex="1"/>
+          <input type="password" name="pWord" id="name" value="" placeholder="Password" tabindex="2"/>  
         </div>
-        <select name="room">
-          <option value="" disabled selected>Room number</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
-        <input class="submit" type="submit" value="Next"/>
+        <input class="submit" type="submit" value="Next"/>      
       </form>
     </div>
-    <a href=""><p>Staff Login</p></a>
+    <div class="splitCol loginLinks">
+      <a href=""><p>Staff Login</p></a>
+      <a href=""><p>Create Account</p></a>
+    </div>
   </main>
     
 </body>
